# algorithm_modules

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  README.md
lib/sqlite/: CMakeLists.txt
scripts/: system_schema.sql
src/: main.cpp  plugin_module.cpp  plugin_module.h  python_plugin_module.cpp  python_plugin_module.h
src/api/: CMakeLists.txt  dynamic_library_module.cpp  dynamic_library_module.h  plugin_api.cpp  plugin_api.h  python_plugin_module.cpp  python_plugin_module.h
src/db_context/: CMakeLists.txt  postgresql_context.h  sql_context.h
src/manager/: CMakeLists.txt  plugin_manager.cpp  plugin_manager.h  plugin_spec.h
src/plugin_api/: CMakeLists.txt  dynamic_library_module.cpp  dynamic_library_module.h  plugin_api.cpp  plugin_api.h  plugin_spec.cpp  plugin_spec.h  system_process_module.cpp  system_process_module.h
src/plugin_app/: CMakeLists.txt  main.cpp
src/plugin_common/: CMakeLists.txt
src/plugin_context/: CMakeLists.txt  postgresql_context.cpp  postgresql_context.h  sql_context.cpp  sql_context.h  sqlite_context.cpp  sqlite_context.h
src/plugin_manager/: CMakeLists.txt  plugin_manager.cpp  plugin_manager.h
src/plugin_model/: CMakeLists.txt  plugin_model.cpp  plugin_model.h
src/plugin_modules/: CMakeLists.txt  module_controller.cpp  module_controller.h  plugin_controller.cpp  plugin_controller.h  plugin_controller_service.cpp  plugin_controller_service.h  postgresql_module.cpp  postgresql_module.h  sql_module.cpp  sql_module.h  sqlite_module.cpp  sqlite_module.h
src/plugin_python/: CMakeLists.txt  python_plugin_module.cpp  python_plugin_module.h
tests/: dynamic_module_library.cpp  dynamic_module_test.cpp  loading_modules_test.cpp  module_context_test.cpp  module_manager_test.cpp  plugin_spec_test.cpp  postgresql_context_test.cpp  postgresql_module_test.cpp  python_plugin_test.cpp  sqlite_context_test.cpp  sqlite_module_test.cpp  system_process_module_test.cpp  test_main.cpp  tests.h
tests_data/: configuration.xml  echo.bat  environment.bat  model_01.xml  plugin.01.py  plugin.02.py
